# poetry-with-docker-sample

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  run-script
app/: __init__.py  greeter.py
scripts/: main.py
tests/: __init__.py
tests/app/: __init__.py  test_greeter.py
