[tool.poetry]
name = "poetry-with-docker"
version = "0.1.0"
description = ""
authors = ["tamanobi <tamanobi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.2"
flake8 = "^3.8.1"
mypy = "^0.770"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
